--- a/kfold-cv-lda-logreg-roc.ipynb
+++ b/kfold-cv-lda-logreg-roc.ipynb
@@ -206,7 +206,7 @@
     "    @param fpr: float (False Positive Rate - the 1-Specificity)\n",
     "    @returns float\n",
     "    \"\"\"\n",
-    "    return (tpr / (1-fpr)) / 2"
+    "    return (tpr + (1-fpr)) / 2"
    ]
   },
   {
@@ -857,21 +857,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
